# madewithml

./: pyproject.toml  requirements.txt
notebooks/: madewithml.ipynb
