[tool.poetry]
name = "madewithml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
cleanlab = "^2.6.3"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.4"
mlflow = "^2.11.3"
nltk = "^3.8.1"
numpy = "^1.26.4"
numpyencoder = "^0.3.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
ray = {extras = ["air"], version = "^2.10.0"}
scikit-learn = "^1.4.2"
sqlalchemy = "^2.0.29"
torch = "^2.2.2"
transformers = "^4.39.3"
jupyterlab = "^4.1.6"
lime = "^0.2.0.1"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.3"}
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
pyupgrade = "^3.15.2"
great-expectations = "^0.18.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
fastapi = "^0.110.1"
pre-commit = "^3.7.0"
typer = "^0.12.3"
anyscale = "^0.24.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
